k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: mern
  labels:
    app: server
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - name: http
      port: 5050
      targetPort: 5050
