k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern
  namespace: mern
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
spec:
  rules:
    - http:
        paths:
          - path: /record
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 5050
          - path: /healthcheck
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 5050
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
